# app-dist-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  building-and-distributing.md  configuring-your-app.md  getting-started.md  index.md  managing-testers.md
src/: app.rs  auth.rs  main.rs  release.rs  status.rs  testers.rs
src/config/: mod.rs
