[package]
name = "app-dist"
version = "0.1.0"
edition = "2021"
description = "Ship macOS betas with one CLI command"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "3"
indicatif = "0.17"
dialoguer = "0.12"
dirs = "6"
anyhow = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
csv = "1"
serde_yml = "0.0.12"
